--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="colorPrimaryVariant">@color/background</item>
 
         <item name="android:statusBarColor">@color/background</item>
-        <item name="android:font">@font/lexend</item>
+        <item name="android:fontFamily">@font/lexend</item>
 
         <item name="android:textColorSecondary">@color/white</item>
     </style>
