--- a/app/src/main/res/drawable/lock_keyhole.xml
+++ b/app/src/main/res/drawable/lock_keyhole.xml
@@ -8,20 +8,20 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/white"
+      android:strokeColor="@color/hint"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M5,10L19,10A2,2 0,0 1,21 12L21,20A2,2 0,0 1,19 22L5,22A2,2 0,0 1,3 20L3,12A2,2 0,0 1,5 10z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/white"
+      android:strokeColor="@color/hint"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M7,10V7a5,5 0,0 1,10 0v3"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/white"
+      android:strokeColor="@color/hint"
       android:strokeLineCap="round"/>
 </vector>
