--- a/app/src/main/res/drawable/pencil.xml
+++ b/app/src/main/res/drawable/pencil.xml
@@ -4,17 +4,17 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M4,4L20,4A2,2 0,0 1,22 6L22,18A2,2 0,0 1,20 20L4,20A2,2 0,0 1,2 18L2,6A2,2 0,0 1,4 4z"
+      android:pathData="M17,3a2.85,2.83 0,1 1,4 4L7.5,20.5 2,22l1.5,-5.5Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/hint"
+      android:strokeColor="@color/white"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="m22,7 l-8.97,5.7a1.94,1.94 0,0 1,-2.06 0L2,7"
+      android:pathData="m15,5 l4,4"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/hint"
+      android:strokeColor="@color/white"
       android:strokeLineCap="round"/>
 </vector>
