--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="16dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/hint"
         android:textSize="14sp" />
 
     <EditText
@@ -64,7 +64,7 @@
         android:paddingHorizontal="16dp"
         android:paddingVertical="16dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/hint"
         android:textSize="14sp" />
 
     <TextView
@@ -89,7 +89,6 @@
             android:id="@+id/loginRemindMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/white"
             android:fontFamily="@font/lexend"
             android:textColor="@color/white" />
 
