--- a/app/src/main/res/layout/activity_register_profile.xml
+++ b/app/src/main/res/layout/activity_register_profile.xml
@@ -1,14 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/backgroundGreyView"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/image_upload" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/primary"
+            app:fabCustomSize="32dp"
+            app:layout_anchor="@+id/backgroundGreyView"
+            app:layout_anchorGravity="end|bottom"
+            app:maxImageSize="16dp"
+            app:srcCompat="@drawable/pencil"
+            app:tint="@color/white" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <EditText
+        android:id="@+id/registerProfileFullName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_edit_text_rounded"
+        android:fontFamily="@font/lexend"
+        android:hint="@string/register_profile_fullname"
+        android:inputType="text"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/hint"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/registerProfileNickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/custom_edit_text_rounded"
+        android:fontFamily="@font/lexend"
+        android:hint="@string/register_profile_nickname"
+        android:inputType="text"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/hint"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/registerProfilePhoneNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/custom_edit_text_rounded"
+        android:fontFamily="@font/lexend"
+        android:hint="@string/register_profile_phone_number"
+        android:inputType="phone"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="16dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/hint"
+        android:textSize="14sp" />
+
+    <com.google.android.flexbox.FlexboxLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginVertical="24dp"
+        android:paddingHorizontal="24dp"
+        app:alignItems="flex_end"
+        app:justifyContent="center">
+
+        <Button
+            android:id="@+id/registerProfileSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="58dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="8dp"
+            android:fontFamily="@font/lexend"
+            android:text="@string/register_profile_submit"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_flexGrow="1" />
+    </com.google.android.flexbox.FlexboxLayout>
 
 </LinearLayout>
