feat(home): add navbar & category list

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,11 +8,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="24dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -119,10 +121,21 @@
                 android:layout_marginHorizontal="24dp"
                 android:orientation="vertical">
 
-
             </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:background="@drawable/navbar_background"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@drawable/navbar_item_selector"
+        app:itemIconSize="24dp"
+        app:itemRippleColor="@android:color/transparent"
+        app:menu="@menu/bottom_nav_menu"
+        app:itemActiveIndicatorStyle="@style/Navbar.Flix"
+        />
 
 </LinearLayout>
