--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,9 +6,9 @@
         android:title="Home" />
 
     <item
-        android:id="@+id/explore"
+        android:id="@+id/discover"
         android:icon="@drawable/compass"
-        android:title="Explore"
+        android:title="Discover"
 
         />
 
