feat(global): some details

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,12 +58,14 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/home_search_button"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/search"
                             app:tint="@color/white" />
 
                         <ImageView
+                            android:id="@+id/home_notification_button"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginStart="12dp"
@@ -101,6 +103,7 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/highlight_play_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/home_play_button"
@@ -108,6 +111,7 @@
                             android:textColor="@color/white" />
 
                         <Button
+                            android:id="@+id/highlight_download_button"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
