--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -104,7 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/play"
-                    android:drawablePadding="8dp"
+                    android:drawablePadding="4dp"
                     android:text="@string/media_play_button"
                     android:textColor="@color/white"
                     android:layout_marginEnd="12dp"
@@ -114,6 +115,8 @@
                     android:id="@+id/downloadButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/download"
+                    android:drawablePadding="4dp"
                     android:text="@string/media_download_button"
                     android:textColor="@color/white"
                     android:theme="@style/Button.Secondary"
@@ -163,8 +166,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:text="Trailers" />
+                    android:textSize="18sp"
+                    android:text="@string/media_trailer_title"
+                    />
             </LinearLayout>
 
             <LinearLayout
