refactor(architecture): switching to an MVC like architecture and refactoring activities and fragments

--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/background"
-            android:padding="24dp"
+            android:paddingHorizontal="24dp"
             app:alignItems="center"
             app:flexDirection="row"
             app:flexWrap="wrap"
