--- a/app/src/main/res/layout/fragment_media_actor.xml
+++ b/app/src/main/res/layout/fragment_media_actor.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingEnd="8dp">
+
     <ImageView
         android:id="@+id/profileImage"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginEnd="8dp"
-        />
+        android:layout_marginEnd="8dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/actorName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:layout_marginBottom="4dp"
-            android:textSize="16sp"
-            />
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
         <TextView
             android:id="@+id/actorCharacter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/hint"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
     </LinearLayout>
 
 </LinearLayout>
